# git-cola

./: .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  COPYRIGHT  INSTALL  LICENSE  MANIFEST.in  Makefile  New Text Document.txt  README  README.md  README.rst  RELEASE.md  TODO  appveyor.yml  checklist  commit-version  common.sh  configure  docs  fetch_pyqt_windows.sh  ftp-upload  garden.yaml  generate-about  git-cola  git-view.txt  github-release  github-upload  github.io.sh  github.py  (+24 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml
api/: ugitapi.py
buildutils/: __init__.py  po2qm.py  pyuic4.py  waf
cola/: __init__.py  __main__.py  _version.py  actions.py  app.py  basecmd.py  bookmarks.py  cmd.py  cmdfactory.py  cmds.py  commands.py  compat.py  core.py  ctrl.py  dag.py  decorators.py  defaults.py  diffinline.py  diffparse.py  difftool.py  display.py  editpatch.py  errors.py  exception.py  fields.py  fsmonitor.py  git-cola  git.py  gitcfg.py  gitcmd.py  gitcmds.py  gitcola.py  gravatar.py  guicmds.py  hidpi.py  hotkeys.py  i18n.py  icons.py  inotify.py  interaction.py  (+32 more)
cola/classic/: __init__.py  controller.py  model.py  view.py
cola/controllers/: __init__.py  bookmark.py  classic.py  compare.py  createbranch.py  createtag.py  log.py  main.py  merge.py  options.py  remote.py  repobrowser.py  search.py  selectcommits.py  stash.py  util.py  wscript
cola/dag/: __init__.py  model.py  (+3 more)
conda.recipe/: build.sh  meta.yaml
contrib/: README.md  _git-cola  blame-ignore-revs  build-git-cola.sh  build-git-cola.yaml  git-cola-completion.bash  install-python2.6.sh  install-python2.6.yaml  pyqt4toqtpy  svg.tidy  travis-build
darwin/: Info.plist  README  __boot__.py  git-cola  git-cola.icns  macports-setup-dev-env.sh  name-tarball.py  py2app-setup.py
debian/: changelog  control  copyright  dirs  rules
doc/: Makefile  baseclasses.rst  conf.py  controllers.rst  git-cola.txt  git-difftool.txt  index.rst  inotify.rst  misc.rst  models.rst  observable.rst  observer.rst  qobserver.rst  reference.rst  userguide.rst  views.rst
docs/: .gitignore  Makefile  conf.py  git-cola.rst  git-dag.rst  hotkeys.html  hotkeys_de.html  hotkeys_zh_CN.html  hotkeys_zh_TW.html  relnotes.rst  thanks.rst
extras/: README.md  __init__.py  build.py  build_helpers.py  build_mo.py  build_pot.py  build_qm.py  build_util.py  generate-build-version.sh  install.py  install_helpers.py
jsonpickle/: LICENSE  __init__.py  handlers.py  pickler.py  tags.py  unpickler.py  util.py
po/: README  cs.po  de.po  es.po  fr.po  git-cola.pot  hu.po  id_ID.po  it.po  ja.po  pl.po  pt_BR.po  ru.po  sv.po  tr_TR.po  uk.po  zh_CN.po  zh_TW.po  zh_cn.po
py/: __init__.py  cmds.py  controllers.py  createbranchcontroller.py  gitcontroller.py  gitview.py  inotify.py  model.py  models.py  observer.py  qobserver.py  qtutils.py  repobrowsercontroller.py  syntax.py  ugitcmds.py  ugitcontroller.py  ugitdata.py  ugitmainwindow.py  ugitmodel.py  ugitutils.py  ugitview.py  utils.py  view.py  views.py  wscript
python-git/: git.py  wscript
qtpy/: QtCore.py  QtDesigner.py  QtGui.py  QtMultimedia.py  QtNetwork.py  QtOpenGL.py  QtPositioning.py  QtPrintSupport.py  QtSerialPort.py  QtSvg.py  QtTest.py  QtWebEngineWidgets.py  QtWebKit.py  QtWidgets.py  QtWinExtras.py  __init__.py  _version.py  compat.py  py3compat.py  uic.py
requirements/: requirements-dev.txt  requirements-maint.txt  requirements-optional.txt  requirements.txt
scripts/: build-win32.sh  cola-win32.sh  cola.desktop  common.sh  genchangelog.sh  gitversion.sh  html2py.pl  just-build-it.sh  mkdeb.sh  mktar-win32.sh  mktar.sh  py2exe-setup.py  pycompile  ugit-cygwin.sh  ugit-msys.sh  ugit-win32.sh  ugit.desktop  version.sh  wscript
simplejson/: __init__.py  decoder.py  encoder.py  ordered_dict.py  tool.py
styles/: dark.qss
t/: Makefile  modeltest.py  run_tests  t0000-import-test.py  t0001-git-commands.py  t0002-model-object.py  t0003-git-ops.py  t0004-model-save-restore.py  testmodel.py  testutils.py
test/: Makefile  app_test.py  appearance_test.py  branch_test.py  browse_model_test.py  cmds_test.py  compat_test.py  core_test.py  dag_test.py  diff_debounce_test.py  diffparse_test.py  display_test.py  git_test.py  gitcfg_test.py  gitcmds_test.py  gitops_test.py  graph_test.py  gravatar_test.py  helper.py  i18n_test.py  icons_test.py  main_model_test.py  models_selection_test.py  per_repo_theme_test.py  prefs_test.py  qtutils_test.py  remote_test.py  resources_test.py  server_test.py  settings_test.py  short_branch_overlapping.sh  spellcheck_test.py  startup_test.py  stash_model_test.py  status_test.py  switcher_test.py  test_app.py  test_cola_app.py  test_cola_cmdfactory.py  test_cola_core.py  (+27 more)
tests/: conftest.py  test_custom.ui  test_main.py  test_patch_qcombobox.py  test_qcombobox.py  test_ui.py  test_uic.py  tests.py  travis.py
ugit/: __init__.py  controllers.py  createbranchcontroller.py  defaults.py  git-ugit  git.py  inotify.py  model.py  models.py  pushcontroller.py  qobserver.py  qtutils.py  repobrowsercontroller.py  ugitrc.py  utilcontroller.py  utils.py  views.py  wscript
ugitlibs/: __init__.py  cmds.py  controllers.py  createbranchcontroller.py  defaults.py  git.py  inotify.py  model.py  models.py  observer.py  pushcontroller.py  qobserver.py  qtutils.py  repobrowsercontroller.py  syntax.py  utilcontroller.py  utils.py  views.py  wscript
ui/: BranchDialog.ui  CommandDialog.ui  CommitBrowser.ui  CreateBranchDialog.ui  PushDialog.ui  Window.ui  about.ui  bookmark.ui  branch.ui  branchgui.ui  branchview.ui  combo.ui  commit.ui  commitgui.ui  compare.ui  createbranch.ui  createbranchgui.ui  items.ui  logger.ui  main.ui  maingui.ui  merge.ui  options.ui  optionsgui.ui  outputgui.ui  push.ui  pushgui.ui  remote.ui  search.ui  searchgui.ui  stash.ui  ugitCommandDialog.ui  ugitCommitBrowser.ui  ugitWindow.ui  wscript
win32/: README.md  cola  cola.bat  create-installer.sh  dag  dirname  install.iss  py2exe-setup.py  pyuic4
(+407 files in other folders)
