[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-cola"
authors = [
    {name = "David Aguilar", email = "davvid@gmail.com"}
]
license = "GPL-2.0"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
description = "Git Cola is a powerful Git GUI with a slick and intuitive user interface."
dependencies = [
    "polib >= 1.0.0",
    "qtpy >= 1.1.0",
]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
testing = [
    "pytest >= 6",
    "pytest-checkdocs >= 2.4",
    "pytest-enabler >= 2.2",
    "pytest-ruff >= 0.2.1",
]
docs = [
    "furo",
    "sphinx",
    "rst.linker >= 1.9",
]
# "extras" are optional packages that enable additional features when present.
extras = [
    # Enables desktop notifications.
    "notify2",
    # Enables macOS-specific appearance themes.
    "pyobjc; sys_platform == 'darwin'",
    # Enables the "Send to Trash" feature.
    "send2trash",
]
# Developer tools.
dev = [
    "cercis",
    "mypy == 1.19.1",
    "pyupgrade",
]
# Build and packaging tools.
build = [
    "build",
    "pynsist",
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 3.4.1",
    "twine",
    "wheel",
]
# Extra packages when installing for specific platforms or Qt versions.
pyqt5 = [
    "PyQt5",
]
pyqt6 = [
    "PyQt6",
]
pyside2 = [
    "PySide2",
]
pyside6 = [
    "PySide6",
]

[project.scripts]
cola = "cola.main:main"
git-cola = "cola.main:main"
git-dag = "cola.dag:main"
git-cola-sequence-editor = "cola.sequenceeditor:main"

[tool.cercis]
function-definition-extra-indent = false
line-length = 88

[tool.pytest-enabler.ruff]
addopts = "--ruff"

[tool.setuptools]
packages = [
    "cola",
    "cola.bin",
    "cola.data",
    "cola.i18n",
    "cola.i18n.glossary",
    "cola.icons",
    "cola.icons.dark",
    "cola.models",
    "cola.widgets",
]
include-package-data = true

[tool.setuptools.package-data]
cola = [
    "bin/*",
    "data/*.html",
    "i18n/*.po",
    "i18n/glossary/*.po",
    "icons/*.svg",
    "icons/dark/*.svg",
]

[tool.setuptools_scm]
fallback_version = "4.17.1"

[tool.mypy]
python_version = "3.9"
# TODO: enable more and more checks as typing across project is improved
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
strict_optional = false
warn_return_any = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
disable_error_code = [
    "attr-defined",
    "import-untyped",
    "no-redef",
    "unused-ignore",
    "var-annotated",
]
exclude = [
    "^qtpy/",
    "^contrib/",
    "^docs/",
    "^extras/",
    "^share/",
]

[[tool.mypy.overrides]]
module = [
    "qtpy",
    "qtpy.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "polib",
    "notify2",
    "AppKit",
    "send2trash",
    "pywintypes",
    "win32con",
    "win32event",
    "win32file",
]
ignore_missing_imports = true
