[metadata]
name = git-cola
author = David Aguilar
author_email = davvid@gmail.com
description = A sleek and powerful Git GUI
license_file = COPYING
license = GPL-2.0
long_description = Git Cola is a powerful Git GUI with a slick and intuitive user interface.
url = https://github.com/git-cola/git-cola
platform = any
classifiers =
	Development Status :: 6 - Mature
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Version Control :: Git

[bdist_wheel]
universal = 1

[bdist_rpm]
release = 1
requires = python
build_requires = python
doc_files = 
	COPYING
	COPYRIGHT
	README.md
	docs/

[upload_sphinx]
upload-dir = docs/_build/html

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[options]
python_requires = >=2.7
packages = find:
include_package_data = true
install_requires =
	importlib_metadata; python_version<"3.8"
	PyQt5 >= 5.6.0; python_version>="3.0"
	qtpy >= 1.1.0
zip_safe = false

[options.package_data]
cola =
	bin/*
	i18n/*
	icons/*.svg

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	env*
	extras*
	qtpy*
	share*
	test*
	todo*

[options.data_files]
share/applications =
	share/applications/git-cola.desktop
	share/applications/git-cola-folder-handler.desktop
	share/applications/git-dag.desktop
share/doc/git-cola =
	docs/hotkeys.html
	docs/hotkeys_de.html
	docs/hotkeys_zh_CN.html
	docs/hotkeys_zh_TW.html
share/icons/hicolor/scalable/apps =
	cola/icons/git-cola.svg
share/metainfo =
	share/metainfo/git-cola.appdata.xml
	share/metainfo/git-dag.appdata.xml

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	PyQt5; python_version>='3.0'
	PySide2; python_version=='2.7'

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	cola = cola.main:main
	git-cola = cola.main:main
	git-dag = cola.dag:main
	git-cola-sequence-editor = cola.sequenceeditor:main
