[metadata]
name = git-cola
long_description = Git Cola is a powerful Git GUI with a slick and intuitive user interface.
url = https://github.com/git-cola/git-cola
platform = any

[bdist_rpm]
release = 1
requires = python
build_requires = python
doc_files =
	COPYING
	COPYRIGHT
	README.md
	docs/

[upload_sphinx]
upload-dir = docs/_build/html

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[options]
packages =
    cola
    cola.bin
    cola.i18n
    cola.i18n.glossary
    cola.icons
    cola.icons.dark
    cola.models
    cola.widgets
include_package_data = true
install_requires =
	importlib_metadata; python_version<"3.8"
	PyQt5 >= 5.6.0; python_version>="3.0"
	qtpy >= 1.1.0
zip_safe = false

[options.package_data]
cola =
	bin/*
	i18n/*
	icons/*.svg
	icons/dark/*.svg

[options.packages.find]
exclude =
	bin*
	build*
	dist*
	docs*
	env*
	extras*
	qtpy*
	share*
	test*
	todo*

[options.data_files]
share/applications =
	share/applications/git-cola.desktop
	share/applications/git-cola-folder-handler.desktop
	share/applications/git-dag.desktop
share/doc/git-cola =
	docs/hotkeys.html
	docs/hotkeys_de.html
	docs/hotkeys_zh_CN.html
	docs/hotkeys_zh_TW.html
share/icons/hicolor/scalable/apps =
	cola/icons/git-cola.svg
share/metainfo =
	share/metainfo/git-cola.appdata.xml
	share/metainfo/git-dag.appdata.xml

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-cov
	pytest-enabler >= 1.0.1

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	# local
