[metadata]
name = git-cola
long_description = Git Cola is a powerful Git GUI with a slick and intuitive user interface.
url = https://gitlab.com/git-cola/git-cola
platform = any

[upload_sphinx]
upload-dir = docs/_build/html

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[options]
packages =
	cola
	cola.bin
	cola.i18n
	cola.i18n.glossary
	cola.icons
	cola.icons.dark
	cola.models
	cola.widgets
include_package_data = true
install_requires =
	importlib_metadata; python_version<"3.8"
	polib >= 1.0.0
	qtpy >= 1.1.0
zip_safe = false

[options.package_data]
cola =
	bin/*
	i18n/*
	icons/*.svg
	icons/dark/*.svg

[options.data_files]
share/applications =
	share/applications/git-cola.desktop
	share/applications/git-cola-folder-handler.desktop
	share/applications/git-dag.desktop
share/doc/git-cola =
	docs/hotkeys.html
	docs/hotkeys_de.html
	docs/hotkeys_zh_CN.html
	docs/hotkeys_zh_TW.html
share/icons/hicolor/scalable/apps =
	cola/icons/git-cola.svg
share/metainfo =
	share/metainfo/git-cola.appdata.xml
	share/metainfo/git-dag.appdata.xml

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	furo
	sphinx
	rst.linker >= 1.9

# "extras" are optional packages that enable additional features when present.
extras =
	# Enables the "Send to Trash" feature.
	send2trash
	# Enables macOS-specific appearance themes.
	pyobjc; sys_platform == 'darwin'
	# Enables desktop notifications.
	notify-py

# Developer tools.
dev =
	cercis

# Build and packaging tools.
build =
	build
	pynsist
	twine
	wheel

# Extra packages when installing for specific platforms or Qt versions.
pyqt5 =
	PyQt5

pyqt6 =
	PyQt6
